--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
-    "pretty-ms": "^2.1.0",
+    "pretty-ms": "^3.1.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
@@ -15,5 +15,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "homepage": "http://sudoku.eddiebrunstedt.com"
 }
